--- a/src/index.css
+++ b/src/index.css
@@ -3622,8 +3622,17 @@ svg.md-icon {
   .md-background--secondary-hover:hover {
     background: rgba(213, 0, 249, 0.9); } }
 
+html {
+  position: relative; }
+
+html, body {
+  height: 100%; }
+
 body {
-  margin: 0; }
+  margin: 0;
+  background-image: url("http://conductor.com.br/Content/images/a-conductor/banner-conductor.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 .sexo {
   margin: 0;
