versão com otimizações

--- a/src/index.css
+++ b/src/index.css
@@ -3630,9 +3630,10 @@ html, body {
 
 body {
   margin: 0;
-  background-image: url("http://conductor.com.br/Content/images/a-conductor/banner-conductor.jpg");
-  background-size: cover;
-  background-repeat: no-repeat; }
+  background: #f1f1f1; }
+
+.App {
+  background: #f1f1f1; }
 
 .sexo {
   margin: 0;
@@ -3641,3 +3642,17 @@ body {
     margin: 0;
     padding-left: 7px;
     padding-top: 10px; }
+
+.md-dialog--centered .md-dialog {
+  max-height: auto;
+  max-width: auto; }
+  @media (max-device-width: 320px) {
+    .md-dialog--centered .md-dialog {
+      max-height: 484px;
+      max-width: 304px; } }
+
+.md-dialog--centered .md-overlay {
+  bottom: -50vh;
+  left: -50vw;
+  right: -50vw;
+  top: -50vh; }
